# SignalStrategyBacktest

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: parameters.yml
conf/base/crypto/: catalog.yml  crypto_configuration.yml  parameters.yml
conf/base/forex/: catalog.yml  forex_configuration.yml  parameters.yml
conf/base/stocks/: catalog.yml  parameters.yml  stocks_configuration.yml
docs/source/: conf.py  index.rst
src/signalstrategybacktest/: __main__.py  settings.py
src/signalstrategybacktest/pipelines/backtesting/: __init__.py  nodes.py  pipeline.py
src/signalstrategybacktest/pipelines/ingest_financial_data/: __init__.py  nodes.py  pipeline.py
src/signalstrategybacktest/utils/: utils.py
src/signalstrategybacktest/utils/backtesting/: Backtest.py
src/signalstrategybacktest/utils/ingest_financial_data/: DataFetcher.py  exceptions.py  models.py  utils.py
src/signalstrategybacktest/utils/order_management/: OrderManagement.py  utils.py
src/signalstrategybacktest/utils/performance_metrics/: PerformanceMetrics.py  utils.py
src/signalstrategybacktest/utils/risk_management/: RiskManagement.py
src/signalstrategybacktest/utils/technical_indicators/: BollingerBands.py  SmaCross.py
tests/: test_run.py
tests/pipelines/backtesting/: test_pipeline.py
tests/pipelines/ingest_financial_data/: __init__.py  test_node.py  test_pipeline.py
tests/utils/ingest_financial_data/: __init__.py
