[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "signalstrategybacktest"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
signalstrategybacktest = "signalstrategybacktest.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.18.0", "sphinx~=3.4.3", "sphinx_rtd_theme==0.5.1", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.11.1", "sphinx_copybutton==0.3.1", "ipykernel>=5.3, <7.0", "Jinja2<3.1.0", "myst-parser~=0.17.2",]

[tool.kedro]
package_name = "signalstrategybacktest"
project_name = "SignalStrategyBacktest"
kedro_init_version = "0.19.6"
tools = [ "Testing", "Custom Logging", "Documentation", "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/signalstrategybacktest -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "signalstrategybacktest.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
